--- a/Casanova/Casanova/FilterView.xib
+++ b/Casanova/Casanova/FilterView.xib
@@ -4,60 +4,100 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FilterView" customModule="Casanova" customModuleProvider="target">
             <connections>
+                <outlet property="backButton" destination="1sg-67-Ste" id="FE2-CJ-vl3"/>
                 <outlet property="catLabel" destination="azx-Hd-dK8" id="ajh-ch-ArA"/>
                 <outlet property="catgTableView" destination="e7z-U7-Kmb" id="y7z-H6-P69"/>
+                <outlet property="clearButton" destination="esy-Om-pR0" id="VpD-Z6-8rN"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="aC5-3q-wU3"/>
+                <outlet property="doneButton" destination="uVb-ht-lr7" id="Css-Te-mBH"/>
                 <outlet property="levelLabel" destination="2GK-FS-tgy" id="5Cd-jV-Lwu"/>
                 <outlet property="levelTableView" destination="OXc-lg-byV" id="foy-d6-PVJ"/>
+                <outlet property="titleLabel" destination="Wl2-o2-W33" id="Rdv-Am-cFi"/>
                 <outlet property="tpoLabel" destination="nMj-hh-yWs" id="kM8-JN-9uS"/>
                 <outlet property="tpoTableView" destination="T00-xq-D9u" id="Mep-jI-ub0"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="740"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="e7z-U7-Kmb">
-                    <rect key="frame" x="0.0" y="31" width="185" height="350"/>
+                    <rect key="frame" x="0.0" y="86" width="185" height="310"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="350" id="J78-9p-0qu"/>
+                        <constraint firstAttribute="height" constant="310" id="J78-9p-0qu"/>
                     </constraints>
                 </tableView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="T00-xq-D9u">
-                    <rect key="frame" x="190" y="31" width="185" height="350"/>
+                    <rect key="frame" x="190" y="86" width="185" height="310"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OXc-lg-byV">
-                    <rect key="frame" x="0.0" y="417" width="175" height="250"/>
+                    <rect key="frame" x="0.0" y="432" width="175" height="253"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azx-Hd-dK8">
-                    <rect key="frame" x="15" y="5" width="42" height="21"/>
+                    <rect key="frame" x="15" y="60" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nMj-hh-yWs">
-                    <rect key="frame" x="205" y="5" width="170" height="21"/>
+                    <rect key="frame" x="205" y="60" width="170" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2GK-FS-tgy">
-                    <rect key="frame" x="15" y="391" width="160" height="21"/>
+                    <rect key="frame" x="15" y="406" width="160" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1sg-67-Ste">
+                    <rect key="frame" x="15" y="12" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="hKx-Af-CT1"/>
+                    </constraints>
+                    <state key="normal" image="nav_back"/>
+                    <connections>
+                        <action selector="backButtonTapped:" destination="-1" eventType="touchUpInside" id="sNv-s0-DDv"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wl2-o2-W33">
+                    <rect key="frame" x="137.5" y="12" width="100" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="5fb-by-UzY"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="esy-Om-pR0">
+                    <rect key="frame" x="299" y="12" width="46" height="30"/>
+                    <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="clearButtonTapped:" destination="-1" eventType="touchUpInside" id="Fgd-xa-Pgw"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uVb-ht-lr7">
+                    <rect key="frame" x="147.5" y="695" width="80" height="35"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="80" id="BWi-Ls-nXV"/>
+                        <constraint firstAttribute="height" constant="35" id="snB-A2-IT6"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="doneButtonTapped:" destination="-1" eventType="touchUpInside" id="7IV-ov-x7t"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -66,23 +106,37 @@
                 <constraint firstItem="2GK-FS-tgy" firstAttribute="trailing" secondItem="OXc-lg-byV" secondAttribute="trailing" id="90Q-mN-2Bf"/>
                 <constraint firstItem="nMj-hh-yWs" firstAttribute="bottom" secondItem="azx-Hd-dK8" secondAttribute="bottom" id="Bnh-z3-ZFa"/>
                 <constraint firstItem="OXc-lg-byV" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="DhP-ds-Unz"/>
+                <constraint firstAttribute="trailing" secondItem="esy-Om-pR0" secondAttribute="trailing" constant="30" id="K0k-ll-Opb"/>
+                <constraint firstItem="esy-Om-pR0" firstAttribute="bottom" secondItem="Wl2-o2-W33" secondAttribute="bottom" id="KbF-jZ-gG2"/>
                 <constraint firstItem="T00-xq-D9u" firstAttribute="top" secondItem="e7z-U7-Kmb" secondAttribute="top" id="MXn-xt-cXO"/>
                 <constraint firstAttribute="trailing" secondItem="T00-xq-D9u" secondAttribute="trailing" id="NsM-26-ExJ"/>
+                <constraint firstItem="esy-Om-pR0" firstAttribute="top" secondItem="1sg-67-Ste" secondAttribute="top" id="Ou3-sE-AkC"/>
                 <constraint firstItem="e7z-U7-Kmb" firstAttribute="top" secondItem="azx-Hd-dK8" secondAttribute="bottom" constant="5" id="QSz-fZ-aI3"/>
                 <constraint firstItem="nMj-hh-yWs" firstAttribute="leading" secondItem="T00-xq-D9u" secondAttribute="leading" constant="15" id="QUU-xZ-gDc"/>
-                <constraint firstItem="azx-Hd-dK8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="Sl5-o5-1NW"/>
                 <constraint firstItem="nMj-hh-yWs" firstAttribute="top" secondItem="azx-Hd-dK8" secondAttribute="top" id="Sx1-rR-TXY"/>
+                <constraint firstItem="azx-Hd-dK8" firstAttribute="top" secondItem="1sg-67-Ste" secondAttribute="bottom" constant="18" id="U5t-Ts-b37"/>
                 <constraint firstItem="T00-xq-D9u" firstAttribute="height" secondItem="e7z-U7-Kmb" secondAttribute="height" id="Wge-zg-bw9"/>
                 <constraint firstItem="2GK-FS-tgy" firstAttribute="top" secondItem="e7z-U7-Kmb" secondAttribute="bottom" constant="10" id="ZSU-9c-q5d"/>
                 <constraint firstItem="T00-xq-D9u" firstAttribute="width" secondItem="e7z-U7-Kmb" secondAttribute="width" id="bHJ-BG-se1"/>
                 <constraint firstAttribute="trailing" secondItem="OXc-lg-byV" secondAttribute="trailing" constant="200" id="gIa-bx-JVl"/>
                 <constraint firstItem="OXc-lg-byV" firstAttribute="top" secondItem="2GK-FS-tgy" secondAttribute="bottom" constant="5" id="igL-uF-45y"/>
+                <constraint firstAttribute="bottom" secondItem="uVb-ht-lr7" secondAttribute="bottom" constant="10" id="j2J-hE-Y5v"/>
+                <constraint firstItem="1sg-67-Ste" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="j8T-e2-bLW"/>
+                <constraint firstItem="Wl2-o2-W33" firstAttribute="top" secondItem="1sg-67-Ste" secondAttribute="top" id="ljY-5G-Ycq"/>
                 <constraint firstItem="azx-Hd-dK8" firstAttribute="leading" secondItem="e7z-U7-Kmb" secondAttribute="leading" constant="15" id="oec-4s-dVH"/>
+                <constraint firstItem="uVb-ht-lr7" firstAttribute="top" secondItem="OXc-lg-byV" secondAttribute="bottom" constant="10" id="qjc-zl-BxT"/>
                 <constraint firstItem="e7z-U7-Kmb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="rg2-qB-YON"/>
+                <constraint firstItem="Wl2-o2-W33" firstAttribute="bottom" secondItem="1sg-67-Ste" secondAttribute="bottom" id="tRU-PA-dBl"/>
                 <constraint firstItem="nMj-hh-yWs" firstAttribute="trailing" secondItem="T00-xq-D9u" secondAttribute="trailing" id="tyN-xJ-fap"/>
-                <constraint firstAttribute="bottom" secondItem="OXc-lg-byV" secondAttribute="bottom" id="vlx-jn-yKM"/>
+                <constraint firstItem="uVb-ht-lr7" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="uhq-9C-xZv"/>
+                <constraint firstItem="Wl2-o2-W33" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="yRz-Tj-cer"/>
+                <constraint firstItem="1sg-67-Ste" firstAttribute="leading" secondItem="azx-Hd-dK8" secondAttribute="leading" id="ySM-zJ-4As"/>
             </constraints>
-            <point key="canvasLocation" x="34.5" y="53.5"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="34.5" y="17"/>
         </view>
     </objects>
+    <resources>
+        <image name="nav_back" width="11" height="20"/>
+    </resources>
 </document>
